<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_gazebo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>tf2_geometry_msgs</depend>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>iiwa_description</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
